--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-getch-rs = "0.2.0"
+crossterm = "0.27.0"
 xmlwriter = "0.1.0"
+
