--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-crossterm = "0.27.0"
+# Don't upgrade crossterm or it'll fire twice for every key on Windows
+crossterm = "0.25"
 xmlwriter = "0.1.0"
 
